--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
     "axios": "^1.11.0",
     "i18next": "^25.5.0",
     "i18next-browser-languagedetector": "^8.2.0",
